# qobuz-dl2

./: .gitignore  CONPORT_EXPORT.md  README.md  pyproject.toml
context_portal/: context.db
context_portal/alembic/versions/: 2025_06_17_initial_schema.py
context_portal/conport_vector_data/: chroma.sqlite3
memory-bank/: activeContext.md  decisionLog.md  productContext.md  progress.md  systemPatterns.md
qobuz_dl/: bundle.py  cli.py  core.py  downloader.py  metadata.py  qopy.py  utils.py
qobuz_dl2/: __init__.py  browser_login.py  bundle.py  cli.py  color.py  core.py  db.py  downloader.py  metadata.py  qopy.py  utils.py
tests/: test_bundle.py  test_metadata.py  test_utils.py
