[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "qobuz-dl"
version = "0.1.0"
description = "Qobuz music downloader CLI with async httpx and Click"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Project Maintainers" }]
dependencies = [
  "click>=8.1",
  "httpx>=0.27",
  "rich>=13.7",
  "tenacity>=8.5",
  "beautifulsoup4>=4.12",
  "mutagen>=1.47",
  "pathvalidate>=3.2",
  "pick>=2.3",
]

[project.scripts]
qobuz-dl = "qobuz_dl.cli:main"

[dependency-groups]
dev = [
  "ruff>=0.6",
  "mypy>=1.10",
  "pytest>=8.3",
  "types-beautifulsoup4",
]

[tool.ruff]
line-length = 120
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []
per-file-ignores = { "context_portal/alembic/versions/*.py" = ["E501"] }

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.mypy]
python_version = "3.9"
warn_unused_configs = true
ignore_missing_imports = true
pretty = true
show_error_codes = true
