[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["qobuz_dl2"]

[project]
name = "qobuz-dl2"
version = "2.0.0"
description = "Modernized fork of qobuz-dl: a fast, async Qobuz music downloader CLI (token auth, httpx, Click, rich)"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [{ name = "4themusic" }]
keywords = ["qobuz", "music", "downloader", "flac", "hi-res", "cli"]
classifiers = [
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
  "Programming Language :: Python :: 3",
  "Environment :: Console",
  "Topic :: Multimedia :: Sound/Audio",
]
dependencies = [
  "click>=8.1",
  "httpx>=0.27",
  "rich>=13.7",
  "tenacity>=8.5",
  "beautifulsoup4>=4.12",
  "mutagen>=1.47",
  "pathvalidate>=3.2",
  "pick>=2.3",
]

[project.urls]
"Original project" = "https://github.com/vitiko98/qobuz-dl"

[project.optional-dependencies]
# Enables `qobuz-dl2 login`, which captures the auth token from a real browser
# session. After installing, run `python -m playwright install chromium` once.
browser = ["playwright>=1.40"]

[project.scripts]
qobuz-dl2 = "qobuz_dl2.cli:main"

[dependency-groups]
dev = [
  "ruff>=0.6",
  "mypy>=1.10",
  "pytest>=8.3",
  "types-beautifulsoup4",
]

[tool.ruff]
line-length = 120
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []
per-file-ignores = { "context_portal/alembic/versions/*.py" = ["E501"] }

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.mypy]
python_version = "3.9"
warn_unused_configs = true
ignore_missing_imports = true
pretty = true
show_error_codes = true
